# bx7gamerx.github.io

./: .gitignore  README.md  WALKTHROUGH.md  cspage.html  cspagestyle.css  gainchain.html  index.html  mainstyle.css  package-lock.json  package.json  poems.html  poems_styles.css  portfolio.html  portfoliodock.md  script.js  style.css  thoughts.html  vite.config.ts
.github/workflows/: deploy.yml
css/: background.css  base.css  blog_styles.css  components.css  custom_elements.css  gainchain_styles.css  layout.css  project_page.css  sections.css  style.css  styles_new.css  theme_styles.css  wen.txt
js/: animation.js  background.js  blog-functions.js  interactive-elements.js  particles.js  script.js  script_new.js  script_switch_theme.js  script_two.js  theme-switcher.js
projects/: gainchain.html  transformer.html
public/: 404.html  robots.txt  sitemap.xml
src/: App.tsx
src/components/: Footer.css  Footer.tsx  GenomicChart.css  GenomicChart.tsx  GlowButton.css  GlowButton.tsx  Header.css  Header.tsx  ParticleBackground.css  ParticleBackground.tsx  TerminalOverlay.css  TerminalOverlay.tsx  TerminalWindow.css  TerminalWindow.tsx  WasmDemo.css  WasmDemo.tsx
src/data/: commands.ts
src/hooks/: useIntersectionObserver.ts
src/sections/: Contact.css  Contact.tsx  DeepTech.css  DeepTech.tsx  Hero.css  Hero.tsx  ProofOfWork.css  ProofOfWork.tsx  ScientificConvergence.css  ScientificConvergence.tsx  ThoughtLeadership.css  ThoughtLeadership.tsx
src/styles/: global.css  variables.css
src/wasm-pkg/: helix_edge_wasm.d.ts  (+4 more)
wasm/: Cargo.toml
wasm/src/: lib.rs
