[package]
name = "helix-edge-wasm"
version = "0.1.0"
edition = "2021"
description = "Smith-Waterman sequence alignment demo for HelixEdge portfolio"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "s"
lto = true
